# singing

./: .gitignore  LICENSE  README.md  README_zh.md  package.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  lib.rs  main.rs
